<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/material_on_primary_emphasis_high_type"
    android:orientation="vertical"
    android:padding="10dip">

    <TextView
        android:id="@+id/localServerIpLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localServerIpLabel" />

    <EditText
        android:id="@+id/localServerIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/customAppIdLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customAppIdLabel" />

    <EditText
        android:id="@+id/customAppId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/customAppPortLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customAppPortLabel" />

    <EditText
        android:id="@+id/customAppPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/customHubIpLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customHubIpLabel" />

    <EditText
        android:id="@+id/customHubIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/SaveSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>